mido: Enable zram on boot_complete
This help to save ~50ms in boot time and bootanim shown time

Bug: 62957152
Test: marlin boot and swap look normal after boot
Change-Id: Icabec31aa677bd606ca8735fe9d2acb54e88bd75

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -422,6 +422,10 @@ service iop /system/vendor/bin/iop
 
 on property:sys.boot_completed=1
     write /dev/kmsg "Boot completed "
+
+    #Enable ZRAM on boot_complete
+    swapon_all fstab.qcom
+
     #Reset read ahead for dm-0 and dm-1 to 512kb
     write /sys/block/dm-0/queue/read_ahead_kb 512
     write /sys/block/dm-1/queue/read_ahead_kb 512
