--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -573,5 +573,11 @@ service goodix_script /vendor/bin/init.goodix.sh
     user system
     oneshot
 
+service power_off_alarm /vendor/bin/power_off_alarm
+    class core
+    group system
+    disabled
+    oneshot
+
 on property:dev.bootcomplete=1
     setprop sys.io.scheduler "bfq"
