mido: Set permissions of /dev/byte-cntr device
To support ODL to read data from QDSS, create a custom group
and set permission of byte-cntr device. And also set
permission to coresight-tmc-etr/block_size to enable
byte-cntr feature.

Change-Id: Ic80156667dd7511392d5970ddcbd0fdc43ffffca
Signed-off-by: Saranya Chidura <schidura@codeaurora.org>

--- a/rootdir/ueventd.qcom.rc
+++ b/rootdir/ueventd.qcom.rc
@@ -201,6 +201,9 @@
 /dev/tsc_mux0             0660   media       media
 /dev/tsc_ci0              0660   media       media
 
+# QDSS
+/dev/byte-cntr            0660   system    oem_2902
+
 # sensors
 /sys/devices/i2c-12/12-*  pollrate_ms 0664 system system
 /sys/devices/f9925000.i2c/i2c-0/0-*                 enable         0660    input    system
