mido: Change scripts for copying MBNs
1) Using "chmod -h" instead of "chmod"
2) Using "mkdir -m" instread of 2 seperate commands
for creating directory and change permission
3) Using "write" command in RC file instead of "echo ...>"
in bash
4) Create "data/vendor/modem_config" for storing MBNs, which
is read only
5) Remove qcril.db copying in sh file, since this logic is
not used anymore

Change-Id: I5f57278c81daa2eafae146e5fb5fe43bc9a79d89

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -296,6 +296,9 @@ on post-fs-data
     # Create directory for radio
     mkdir /data/vendor/radio 0770 system radio
 
+    # Create directory for modem_config
+    mkdir /data/vendor/modem_config 0550 system radio
+
     # Mounting of persist is moved to 'on emmc-fs' and 'on fs' sections
     # We chown/chmod /persist again so because mount is run as root + defaults
     chown root system /persist
@@ -566,6 +569,9 @@ service qcom-post-boot /vendor/bin/init.qcom.post_boot.sh
 
 on property:sys.boot_completed=1
     start qcom-post-boot
+
+on property:ro.runtime.mbn_copy_completed=1
+    write /data/vendor/radio/copy_complete 1
 
 on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
