mido: change sysfs owner for display_pwr
Change sysfs owner to system for /sys/kernel/hbtp/display_pwr.
Sysfs is used by power team to notify when display is on/off.

Change-Id: I6adacc30d39e65ad4250f32484ddf87206b85c12

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -55,6 +55,7 @@ on init
     write /dev/cpuset/camera-daemon/mems 0
     chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
     chmod 0660 /dev/cpuset/camera-daemon/tasks
+   chown system system /sys/kernel/hbtp/display_pwr
 
 on post-fs
     start vendor.qseecomd
