mido: change sysfs owner for display_pwr
Change sysfs owner to system for /sys/kernel/hbtp/display_pwr.
Sysfs is used by power team to notify when display is on/off.

Change-Id: I6adacc30d39e65ad4250f32484ddf87206b85c12

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -154,6 +154,8 @@ on charger
     start thermal-engine
 
 on boot
+    chown system system /sys/kernel/hbtp/display_pwr
+
 # Flashlight
     chown root system /sys/class/leds/led:torch_1/max_brightness
     chmod 0660 /sys/class/leds/led:torch_1/max_brightness
