mido: change sysfs owner for display_pwr
Change sysfs owner to system for /sys/kernel/hbtp/display_pwr.
Sysfs is used by power team to notify when display is on/off.

Change-Id: I6adacc30d39e65ad4250f32484ddf87206b85c12

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -195,6 +195,7 @@ on boot
 	chown system system /dev/cpuset/camera-daemon
 	chown system system /dev/cpuset/camera-daemon/tasks
 	chmod 0664 /dev/cpuset/camera-daemon/tasks
+    chown system system /sys/kernel/hbtp/display_pwr
 
 service ppd /vendor/bin/mm-pp-dpps
     class late_start
