mido: Add system/wakelock groups to post_boot.sh script
The post_boot script writes to scaling_(min/max)_feq and
wake_lock nodes which are owned by system and wakelock groups.

Change-Id: Ief83a152f8433976082aaa129bdb193dd3adb320

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -555,6 +555,7 @@ service qcom-sh /vendor/bin/init.qcom.sh
 service qcom-post-boot /vendor/bin/init.qcom.post_boot.sh
     class late_start
     user root
+    group root system wakelock
     disabled
     oneshot
 
