--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -555,7 +555,7 @@ service qcom-sh /vendor/bin/init.qcom.sh
 service qcom-post-boot /vendor/bin/init.qcom.post_boot.sh
     class late_start
     user root
-    group root system wakelock
+    group root system wakelock graphics
     disabled
     oneshot
 
