mido: Address dac_override and dac_read_search issues in init.qcom.sh
init.qcom.sh accesses files owned by groups radio, system and hence
the groups have been added.

Change-Id: I535eeaf42f38532ec6de46eb57f3cc0e1d959a47

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -555,6 +555,7 @@ service loc_launcher /system/vendor/bin/loc_launcher
 service qcom-sh /vendor/bin/init.qcom.sh
     class late_start
     user root
+    group root system radio
     oneshot
 
 service qcom-post-boot /vendor/bin/init.qcom.post_boot.sh
