--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -620,5 +620,10 @@ on property:sys.fp.onstart=1
    setprop ro.hardware.fingerprint goodix
    start fps_hal
 
+service goodix_script /vendor/bin/init.goodix.sh
+    class late_start
+    user root
+    oneshot
+
 on property:dev.bootcomplete=1
     setprop sys.io.scheduler "bfq"
