mido: Start qseecom daemon as early as possible for FBE
Qseecom needs to start at earlier stage for FBE to work properly.

Change-Id: Ie2408f652df291ad6a1b0dee1e4d559ff35c7c45
Signed-off-by: Ramandeep Trehan <rtrehan@codeaurora.org>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -50,6 +50,11 @@ on init
     chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
     chmod 0660 /dev/cpuset/camera-daemon/tasks
 
+on post-fs
+    start vendor.qseecomd
+    wait_for_prop vendor.sys.listeners.registered true
+    write /dev/ipa 1
+
 on post-fs-data
 #Create folder for mm-qcamera-daemon
 mkdir /data/vendor/qcam/ 0770 camera camera
