mido: Update rootdir from caf
 * LA.UM.6.6.r1-06700-89xx.0

Change-Id: Ia81ae03011aff768cf17fe46c5a09132ebb3b1a8

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -59,6 +59,7 @@ on early-boot
     write /sys/kernel/boot_adsp/boot 1
     write /sys/kernel/boot_cdsp/boot 1
     write /sys/kernel/boot_slpi/boot 1
+    chown root audio /sys/kernel/boot_adsp/boot
 
     # Graphics
     chown system graphics /sys/class/graphics/fb0/idle_time
@@ -438,7 +439,7 @@ service cnd /system/vendor/bin/cnd
 service dpmQmiMgr /system/vendor/bin/dpmQmiMgr
     class main
     user system
-    group system
+    group radio system
     writepid /dev/cpuset/system-background/tasks
 
 service irsc_util /vendor/bin/irsc_util "/vendor/etc/sec_config"
@@ -499,7 +500,7 @@ service ipacm-diag /system/vendor/bin/ipacm-diag
     class main
     user radio
     socket ipacm_log_file dgram 660 radio radio
-    group radio diag
+    group radio diag oem_2901
     writepid /dev/cpuset/system-background/tasks
 
 service ipacm /system/vendor/bin/ipacm
@@ -511,7 +512,7 @@ service ipacm /system/vendor/bin/ipacm
 service qti /system/vendor/bin/qti
     class main
     user radio
-    group radio diag usb net_admin
+    group radio oem_2901 diag usb net_admin
     writepid /dev/cpuset/system-background/tasks
 
 service sensors /vendor/bin/sensors.qcom
@@ -595,6 +596,10 @@ on charger
     setprop persist.sys.usb.config mass_storage
     load_system_props
     start qcom-post-boot
+
+on property:init.svc.surfaceflinger=restarting
+    stop hwcomposer-2-1
+    start hwcomposer-2-1
 
 service time_daemon /system/vendor/bin/time_daemon
     class main
