mido: Ship and enable atfwd daemon
 * The atfwd daemon is responsible for handling AT command
   forward requests from modem and should be enabled
   for all targets except sda, apq, qcs.

Change-Id: I886b616565f81da10ad4a7b52baf8854a0b26f52

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -485,6 +485,12 @@ on property:bluetooth.hciattach=true
 on property:bluetooth.hciattach=false
     setprop bluetooth.status off
 
+service atfwd /vendor/bin/ATFWD-daemon
+    class late_start
+    user system
+    group system radio
+    writepid /dev/cpuset/system-background/tasks
+
 service netmgrd /system/vendor/bin/netmgrd
     class main
     writepid /dev/cpuset/system-background/tasks
