mido: additional Sepolicy rules
Change-Id: I6377a7f40df6c253fd289e878e5f00bbe40693a5

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -598,8 +598,8 @@ service time_daemon /system/vendor/bin/time_daemon
 
 service gx_fpd /system/vendor/bin/gx_fpd
      class core
-     user root
-     group system system
+     user system
+     group system drmrpc
      writepid /dev/cpuset/system-background/tasks
 
 on property:sys.fp.vendor=switchf
