mido: Set USB controller configuration for msm8953
Set USB controller configuration like mtp_rx_len, mtp_tx_len
and rndis_transports for msm8953.

Change-Id: Iec7d0341e271a2df2fd6dd43d6f3bc930239d679

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -197,6 +197,15 @@ on boot
 	chmod 0664 /dev/cpuset/camera-daemon/tasks
     chown system system /sys/kernel/hbtp/display_pwr
 
+#USB controller configuration
+    write /sys/module/g_android/parameters/mtp_tx_req_len 131072
+    write /sys/module/g_android/parameters/mtp_rx_req_len 131072
+    write /sys/class/android_usb/android0/f_rndis_qc/rndis_transports BAM2BAM_IPA
+    setprop sys.usb.rndis.func.name "rndis_bam"
+    setprop sys.usb.rmnet.func.name "rmnet_bam"
+    setprop sys.usb.rmnet.inst.name "rmnet"
+    setprop sys.usb.dpl.inst.name "dpl"
+
 service ppd /vendor/bin/mm-pp-dpps
     class late_start
     user system
