--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -163,6 +163,15 @@ on boot
 # access permission for wlan
     chown system system /mnt/vendor/persist/WCNSS_qcom_wlan_nv.bin
 
+#USB controller configuration
+    write /sys/module/g_android/parameters/mtp_tx_req_len 131072
+    write /sys/module/g_android/parameters/mtp_rx_req_len 131072
+    write /sys/class/android_usb/android0/f_rndis_qc/rndis_transports BAM2BAM_IPA
+    setprop sys.usb.rndis.func.name "rndis_bam"
+    setprop sys.usb.rmnet.func.name "rmnet_bam"
+    setprop sys.usb.rmnet.inst.name "rmnet"
+    setprop sys.usb.dpl.inst.name "dpl"
+
 service ppd /vendor/bin/mm-pp-dpps
     class late_start
     user system
