mido: Change the MBN copy property prefix
Changes the prefix of mbn_copy_completed to ro.vendor.ril
as there a permission error with current prefix. and due
to this MBN OTA is failed.

Change-Id: I31a0032aba79177680b7b91363d1d9be97dd9c90
CRs-Fixed: 2261501

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -570,7 +570,7 @@ service qcom-post-boot /vendor/bin/init.qcom.post_boot.sh
 on property:sys.boot_completed=1
     start qcom-post-boot
 
-on property:ro.runtime.mbn_copy_completed=1
+on property:ro.vendor.ril.mbn_copy_completed=1
     write /data/vendor/radio/copy_complete 1
 
 on property:ro.data.large_tcp_window_size=true
