mido: Set IO scheduler to BFQ once boot is complete
 * The kernel defaults to NOOP, which allows high throughput
 * Switch to BFQ, once we are done booting up, to improve UX

Change-Id: Iff7e24eba73a722c08e5e248ebced389223b0444

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -622,3 +622,6 @@ on property:sys.fp.onstart=1
    setprop ro.boot.fpsensor gdx
    setprop ro.hardware.fingerprint goodix
    start fps_hal
+
+on property:dev.bootcomplete=1
+    setprop sys.io.scheduler "bfq"
