mido: Change /data/misc/fm to /data/vendor/fm
Change-Id: I369e0a858c8fddb4574dad5b54b2a3e0980ea3a6

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -341,8 +341,8 @@ on post-fs-data
     mkdir /data/data/media 0770 media media
 
     #Create FM dir for patchdownloader
-    mkdir /data/misc/fm 0770 system system
-    chmod 0770 /data/misc/fm
+    mkdir /data/vendor/fm 0770 system system
+    chmod 0770 /data/vendor/fm
 
     #Create PERFD deamon related dirs
     mkdir /data/vendor/perfd 0770 root system
