mido: Remove oem_2901 group for second RIL daemon service
 * Matches rild.legacy.rc from Pie's RIL

Change-Id: Ic2a8c67d4d7499627f77dee0e01d69b7a06bf390

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -578,7 +578,7 @@ service ril-daemon2 /vendor/bin/hw/rild -c 2
     socket rild2 stream 660 root radio
     socket rild-debug2 stream 660 radio system
     user radio
-    group radio cache inet misc audio sdcard_r sdcard_rw diag oem_2901 log
+    group radio cache inet misc audio sdcard_r sdcard_rw diag log
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service charger /sbin/chargeonlymode
