mido: init: Override android.hardware.audio@2.0-service
override audio hal service to add "oem_2901", "wakelock" group access.

Change-Id: Ie814fb5472d6581742b26403f4c1779416dc12f7

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -616,3 +616,19 @@ service goodix_script /vendor/bin/init.goodix.sh
 
 on property:dev.bootcomplete=1
     setprop sys.io.scheduler "bfq"
+
+service vendor.audio-hal-2-0 /vendor/bin/hw/android.hardware.audio@2.0-service
+    override
+    class hal
+    user audioserver
+    # media gid needed for /dev/fm (radio) and for /data/misc/media (tee)
+    group audio camera drmrpc inet media mediadrm net_bt net_bt_admin net_bw_acct oem_2901 wakelock
+    capabilities BLOCK_SUSPEND
+    ioprio rt 4
+    writepid /dev/cpuset/foreground/tasks /dev/stune/foreground/tasks
+    # audioflinger restarts itself when it loses connection with the hal
+    # and its .rc file has an "onrestart restart audio-hal" rule, thus
+    # an additional auto-restart from the init process isn't needed.
+    oneshot
+    interface android.hardware.audio@4.0::IDevicesFactory default
+    interface android.hardware.audio@2.0::IDevicesFactory default
