mido: init.qcom.rc: Change qti service name to dataqti
qti name is generic and updating it to dataqti so that no generic
context will not match

Change-Id: I95e096328672c987d9ad5e1a67f294079bec8d48

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -498,7 +498,7 @@ service vendor.ipacm /system/vendor/bin/ipacm
     group radio inet
     writepid /dev/cpuset/system-background/tasks
 
-service qti /system/vendor/bin/qti
+service vendor.dataqti /system/vendor/bin/qti
     class main
     user radio
     group radio oem_2901 diag usb net_admin
