mido: Moving persist mount point to /mnt/vendor/persist
Move persist entry to fstab and mount at /mnt/vendor/persist

Apply required user, group and permissions once persist
folder is created through __mount and parititon is mounted.

Run restorecon on /mnt/vendor/persist.

Change-Id: I20a16f3669bc7abf9844525c6ba0db1521a5a8e2

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -39,15 +39,19 @@ on early-init
     write /proc/sys/vm/page-cluster 0
 
 on init
-    # Set permissions for persist partition
-    mkdir /persist 0771 root system
-
     # Create cgroup mount point for memory
     mkdir /sys/fs/cgroup/memory/bg 0750 root system
     write /sys/fs/cgroup/memory/bg/memory.swappiness 140
     write /sys/fs/cgroup/memory/bg/memory.move_charge_at_immigrate 1
     chown root system /sys/fs/cgroup/memory/bg/tasks
     chmod 0660 /sys/fs/cgroup/memory/bg/tasks
+
+    # Set permissions for persist partition
+    chown root system /mnt/vendor/persist
+    chmod 0771 /mnt/vendor/persist
+    mkdir /mnt/vendor/persist/bms 0700 root system
+    mkdir /mnt/vendor/persist/data 0700 system system
+    restorecon_recursive /mnt/vendor/persist
 
 on post-fs
     chmod 0755 /sys/kernel/debug/tracing
