--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -129,7 +129,7 @@ on boot
     mkdir /persist/bluetooth 0770 bluetooth bluetooth
     mkdir /persist/misc 0770 system system
     mkdir /persist/alarm 0770 system system
-    mkdir /persist/time 0770 system system
+    mkdir /mnt/vendor/persist/time 0770 system system
     restorecon_recursive /persist
 
     #Create NETMGR daemon socket area
