mido: init: Create persist directory for hvdcp_opti
hvdcp_opti daemon stores some parameters in
/mnt/vendor/persist/hvdcp_opti directory. Create the directory.

Change-Id: Icc4a7fc199fa5d19dfe9ce563defeb557b65e2b8

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -51,6 +51,7 @@ on init
     chmod 0771 /mnt/vendor/persist
     mkdir /mnt/vendor/persist/bms 0700 root system
     mkdir /mnt/vendor/persist/data 0700 system system
+    mkdir /mnt/vendor/persist/hvdcp_opti 0770 root system
     restorecon_recursive /mnt/vendor/persist
 
 on post-fs
