mido: Starting imsrtpd on bootup
* starting rtpd  on bootup without waiting for DATA_DAEMON
prop and restarting when property is set

Change-Id: Id0cc13f9443a8146809284efb59e51093421df15

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -141,7 +141,6 @@ service vendor.ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
    user system
    group radio diag inet log
    writepid /dev/cpuset/system-background/tasks
-   disabled
 
 service vendor.imsrcsservice /system/vendor/bin/imsrcsd
    class main
@@ -150,7 +149,7 @@ service vendor.imsrcsservice /system/vendor/bin/imsrcsd
    writepid /dev/cpuset/system-background/tasks
 
 on property:vendor.ims.DATA_DAEMON_STATUS=1
-   start vendor.ims_rtp_daemon
+   restart vendor.ims_rtp_daemon
 
 on property:init.svc.surfaceflinger=stopped
     stop ppd
