mido: Add vendor prefix to data vendor binaries
This fixes an issue where the data binaries were not starting up
due to the updated sepolicies. A sepolicy denial was seen in that
case similar to the following -

selinux: avc:  denied  { set } for property=ctl.netmgrd pid=1170
uid=0 gid=0 scontext=u:r:qti_init_shell:s0
tcontext=u:object_r:ctl_default_prop:s0 tclass=property_service
permissive=0

CRs-Fixed: 2191664
Change-Id: I41ff0d8f3280b9438c163fab6db5fff3293f28d0

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -427,7 +427,7 @@ on property:vold.decrypt=trigger_restart_framework
 on property:persist.env.fastdorm.enabled=true
     setprop persist.radio.data_no_toggle 1
 
-service cnd /system/vendor/bin/cnd
+service vendor.cnd /system/vendor/bin/cnd
     class main
     user system
     group system wifi inet radio wakelock net_admin
@@ -475,24 +475,24 @@ on property:bluetooth.hciattach=true
 on property:bluetooth.hciattach=false
     setprop bluetooth.status off
 
-service atfwd /vendor/bin/ATFWD-daemon
+service vendor.atfwd /vendor/bin/ATFWD-daemon
     class late_start
     user system
     group system radio
     writepid /dev/cpuset/system-background/tasks
 
-service netmgrd /system/vendor/bin/netmgrd
+service vendor.netmgrd /system/vendor/bin/netmgrd
     class main
     writepid /dev/cpuset/system-background/tasks
 
-service ipacm-diag /system/vendor/bin/ipacm-diag
+service vendor.ipacm-diag /system/vendor/bin/ipacm-diag
     class main
     user radio
     socket ipacm_log_file dgram 660 radio radio
     group radio diag oem_2901
     writepid /dev/cpuset/system-background/tasks
 
-service ipacm /system/vendor/bin/ipacm
+service vendor.ipacm /system/vendor/bin/ipacm
     class main
     user radio
     group radio inet
@@ -512,7 +512,7 @@ service sensors /vendor/bin/sensors.qcom
 
 on property:ro.use_data_netmgrd=false
     # netmgr not supported on specific target
-    stop netmgrd
+    stop vendor.netmgrd
 
 # Adjust socket buffer to enlarge TCP receive window for high bandwidth
 # but only if ro.data.large_tcp_window_size property is set.
