mido: Change data properties to comply with Treble
Treble changes in Android now require stricter naming conventions for
vendor properties, and also impose stricter requirements on using
properties as actionable triggers in init scripts. This change
updates the properties used by data modules to follow these new
guidelines.

Change-Id: I26a7eff59030679e6d796523de99f14e9654c019
CRs-Fixed: 2215428

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -510,7 +510,7 @@ service sensors /vendor/bin/sensors.qcom
     group root
     writepid /dev/cpuset/system-background/tasks
 
-on property:ro.use_data_netmgrd=false
+on property:ro.vendor.use_data_netmgrd=false
     # netmgr not supported on specific target
     stop vendor.netmgrd
 
