mido: Rename sensor service names by prefixing vendor.
- sensors --> vendor.sensors

Change-Id: I22c1d3a9d7cec1979f6e5d15c8fcfa8025ffb40a

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -504,7 +504,7 @@ service qti /system/vendor/bin/qti
     group radio oem_2901 diag usb net_admin
     writepid /dev/cpuset/system-background/tasks
 
-service sensors /vendor/bin/sensors.qcom
+service vendor.sensors /vendor/bin/sensors.qcom
     class core
     user root
     group root
