mido: Add vendor prefix to below services and properties
- start_hci_filter

CRs-Fixed: 2221652
Change-Id: Ic64610d89e6f05fc3d0b21f8c2c8778a13b18332

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -456,13 +456,13 @@ service tftp_server /vendor/bin/tftp_server
    user root
    writepid /dev/cpuset/system-background/tasks
 
-on property:wc_transport.start_hci=true
-    start start_hci_filter
+on property:vendor.wc_transport.start_hci=true
+    start vendor.start_hci_filter
 
-on property:wc_transport.start_hci=false
-    stop start_hci_filter
+on property:vendor.wc_transport.start_hci=false
+    stop vendor.start_hci_filter
 
-service start_hci_filter /system/vendor/bin/wcnss_filter
+service vendor.start_hci_filter /system/vendor/bin/wcnss_filter
     class late_start
     user bluetooth
     group bluetooth diag system wakelock
