mido: Change service name hvdcp_opti to vendor.hvdcp_opti
Add vendor prefix to hvdcp_opti service name

Change-Id: I8c843786b4651e369dc4740457fca74b5eddc49b

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -182,7 +182,7 @@ service energy-awareness /system/vendor/bin/energy-awareness
     group system
     oneshot
 
-service hvdcp_opti /system/vendor/bin/hvdcp_opti
+service vendor.hvdcp_opti /system/vendor/bin/hvdcp_opti
     class main
     user root
     group system wakelock
@@ -191,7 +191,7 @@ on charger
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
-    start hvdcp_opti
+    start vendor.hvdcp_opti
     start thermal-engine
 
 on boot
