--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -11,6 +11,11 @@
 #XTRA3   = 3
 XTRA_VERSION_CHECK=0
 
+XTRA_TEST_ENABLED = 1
+XTRA_THROTTLE_ENABLED = 0
+
+
+
 # Error Estimate
 # _SET = 1
 # _CLEAR = 0
@@ -25,10 +30,10 @@ XTRA_CA_PATH=/system/etc/security/cacerts
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 3
+DEBUG_LEVEL = 5
 
 # Intermediate position report, 1=enable, 0=disable
-INTERMEDIATE_POS=0
+INTERMEDIATE_POS=1
 
 # Below bit mask configures how GPS functionalities
 # should be locked when user turns off GPS on Settings
@@ -38,7 +43,7 @@ INTERMEDIATE_POS=0
 #GPS_LOCK = 0
 
 # supl version 1.0
-SUPL_VER=0x10000
+SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
 #SUPL_ES=0
@@ -46,7 +51,7 @@ SUPL_VER=0x10000
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
 #0 - Use regular SUPL PDN for Emergency SUPL
-#USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
+USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
 
 #SUPL_MODE is a bit mask set in config.xml per carrier by default.
 #If it is uncommented here, this value will overwrite the value from
@@ -66,15 +71,15 @@ CAPABILITIES=0x37
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-# ACCURACY_THRES=5000
+ACCURACY_THRES=70
 
 ################################
 ##### AGPS server settings #####
 ################################
 
 # FOR SUPL SUPPORT, set the following
-# SUPL_HOST=supl.host.com or IP
-# SUPL_PORT=1234
+SUPL_HOST=supl.qxwz.com
+SUPL_PORT=7275
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
@@ -95,7 +100,7 @@ CAPABILITIES=0x37
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 2
+LPP_PROFILE = 3
 
 ################################
 # EXTRA SETTINGS
@@ -111,7 +116,7 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+A_GLONASS_POS_PROTOCOL_SELECT = 0xF
 
 ##################################################
 # Select technology for LPPe Control Plane
