--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -37,7 +37,7 @@ LPPE_SRN_DATA_SCAN_INJECT_TIME=2
 # without EULA consent, but the uncertainty can be high.
 # QNP preferred mode prefers QNP when there is EULA consent,
 # otherwise OSNLP is used.
-NLP_MODE = 1
+NLP_MODE = 4
 NLP_MODE_EMERGENCY = 2
 NLP_TOLERANCE_TIME_FIRST = 5000
 NLP_TOLERANCE_TIME_AFTER = 20000
@@ -46,16 +46,14 @@ NLP_ACCURACY_MULTIPLE = 2
 NLP_COMBO_MODE_USES_QNP_WITH_NO_EULA_CONSENT = 1
 
 #########################################
-# NLP PACKAGE AND ACTION SETTINGS
+# NLP PACKAGE SETTINGS
 #########################################
-# OSNLP_PACKAGE/OSNLP_ACTION: name/action of default NLP package
+# OSNLP_PACKAGE: name of default NLP package
 OSNLP_PACKAGE = com.google.android.gms
-OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
-# REGION_OSNLP_PACKAGE/REGION_OSNLP_ACTION:
-# These two values will be used as alternative
+# REGION_OSNLP_PACKAGE:
+# This value will be used as alternative
 # for particular region where default NLP is not functional.
 #REGION_OSNLP_PACKAGE = com.baidu.map.location
-#REGION_OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
 
 # Threshold period for ZPP triggers
 ZPP_TRIGGER_THRESHOLD=60000
@@ -105,12 +103,12 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
-GTP_CELL=DISABLED
+GTP_CELL=BASIC
 
 #GTP_WIFI valid modes:
 # DISABLED
 # BASIC
-GTP_WIFI=DISABLED
+GTP_WIFI=BASIC
 
 #GTP_WAA valid modes:
 # DISABLED
@@ -121,7 +119,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=BASIC
+SAP=PREMIUM
 
 #ODCPI valid modes:
 #DISABLED
@@ -186,12 +184,8 @@ PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=automotive
 
-#Valyes for LEAN_TARGETS can be:
-#ENABLED  -> if this process is supposed to run on lean and mean targets
-#DISABLED -> if this process is to be disabled on lean and mean targets
 PROCESS_NAME=garden_app
 PROCESS_ARGUMENT=-l 0 -T 1
 PROCESS_STATE=ENABLED
@@ -200,7 +194,6 @@ PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=automotive
 
 PROCESS_NAME=gpsone_daemon
@@ -211,18 +204,16 @@ PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=msm7630_fusion
 BASEBAND=svlte2a sglte sglte2
-LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
 PROCESS_NAME=lowi-server
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=gps net_admin wifi inet qcom_diag
+PROCESS_GROUPS=gps net_admin wifi inet oem_2901
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf303
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
 PROCESS_NAME=xtwifi-inet-agent
@@ -233,29 +224,26 @@ PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0f
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
 PROCESS_NAME=xtwifi-client
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=wifi inet gps system oem_2952
+PROCESS_GROUPS=wifi inet gps system oem_2904
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0f
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
 PROCESS_NAME=slim_daemon
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=gps qcom_diag can
+PROCESS_GROUPS=gps oem_2901 can
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
 PROCESS_NAME=xtra-daemon
@@ -266,14 +254,4 @@ PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
-
-##################################################
-# The name of process which launches XTRA client.
-# Default process name in software which launches
-# XTRA client is system-server. Uncomment the below
-# to set the desired process which will start the
-# XTRA client.
-##################################################
-# XC20_LAUNCH_PROCESS_NAME=garden_app
