mido: Set sys.post_boot.parsed on vendor.post_boot.parsed changed
* For compatibility with O blobs

Change-Id: I1a2ec0fae9934ba7e7fcbb777f967a1f129a2894

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -632,3 +632,6 @@ service vendor.audio-hal-2-0 /vendor/bin/hw/android.hardware.audio@2.0-service
     oneshot
     interface android.hardware.audio@4.0::IDevicesFactory default
     interface android.hardware.audio@2.0::IDevicesFactory default
+
+on property:vendor.post_boot.parsed=*
+    setprop sys.post_boot.parsed ${vendor.post_boot.parsed}
