mido: Camera: init.target: Moved camera-daemon creation to on-init.
Issue: cameraserver or camera-provider service is not able to
      write pid's to cpuset/camera-daemon.

Solution:
    1) Increased the cpu to 0-7
    2) Moved camera-daemon folder creation from on-boot to on-init.
CRs-fixed:2200628

Change-Id: I26591616c00fa5399cfe10f0eaedceb35035a7fe

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -38,6 +38,13 @@ on fs
 on init
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
+# Add a cpuset for the camera daemon
+    mkdir /dev/cpuset/camera-daemon 0750 cameraserver cameraserver
+    write /dev/cpuset/camera-daemon/cpus 0-7
+    write /dev/cpuset/camera-daemon/mems 0
+    chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
+    chmod 0660 /dev/cpuset/camera-daemon/tasks
+
 on post-fs-data
     mkdir /persist/data/sfs 0700 system system
     mkdir /persist/data/tz 0700 system system
@@ -173,14 +180,6 @@ on charger
     start thermal-engine
 
 on boot
-	# add a cpuset for the camera daemon
-	# we want all cores for camera
-	mkdir /dev/cpuset/camera-daemon
-	write /dev/cpuset/camera-daemon/cpus 0-3
-	write /dev/cpuset/camera-daemon/mems 0
-	chown system system /dev/cpuset/camera-daemon
-	chown system system /dev/cpuset/camera-daemon/tasks
-	chmod 0664 /dev/cpuset/camera-daemon/tasks
     chown system system /sys/kernel/hbtp/display_pwr
 
 #USB controller configuration
