mido: rootdir: sensors.qcom -> sensors.qti
* updated blob has been renamed to sensors.qti

Change-Id: I55ede2db2b21df56cb5a75267acc24e5b651822d

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -449,7 +449,7 @@ service vendor.dataqti /vendor/bin/qti
     group radio oem_2901 diag usb net_admin
     writepid /dev/cpuset/system-background/tasks
 
-service vendor.sensors /vendor/bin/sensors.qcom
+service vendor.sensors /vendor/bin/sensors.qti
     class core
     user root
     group root
